--- a/package.json
+++ b/package.json
@@ -13,5 +13,6 @@
 		"type": "git",
 		"url": "https://github.com/freeCodeCamp/boilerplate-npm.git"
 	},
-	"keywords": ["node", "express", "project", "freecodecamp"]
+	"keywords": ["node", "express", "project", "freecodecamp"],
+	"license": "MIT"
 }
