--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-	"author": "Simone Earl D. Madarang",
-	"description": "A Node.js project that demonstrates package.json usage",
-	"name": "fcc-learn-npm-package-json",
-	"dependencies": {
-		"express": "^4.14.0"
-	},
-	"main": "server.js",
-	"scripts": {
-		"start": "node server.js"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/freeCodeCamp/boilerplate-npm.git"
-	},
-	"keywords": ["node", "express", "project", "freecodecamp"],
-	"license": "MIT"
+  "name": "fcc-learn-npm-package-json",
+  "version": "1.0.0",
+  "author": "Simone Earl D. Madarang",
+  "description": "A Node.js project that demonstrates package.json usage",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.14.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/freeCodeCamp/boilerplate-npm.git"
+  },
+  "keywords": ["node", "express", "project", "freecodecamp"],
+  "license": "MIT"
 }
