--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "@freecodecamp/example": "1.1.0"
   },
   "repository": {
     "type": "git",
